Fix alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,6 @@
   --text-color: #272a31;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 html,
 body {
   font-size: 16px;
